# just_distribute

./: README.md  pyproject.toml
docs/: index.html
just_distribute/: __init__.py  decorator.py
tests/: __init__.py  primitives.py  test_decorator.py
