[tool.poetry]
name = "just-distribute"
version = "0.1.0"
description = ""
authors = ["Jakub Gajski <jakub.gajski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psutil = "^5.9.8"
pathos = "^0.3.2"
ray = {extras = ["client"], version = "^2.20.0"}


[tool.poetry.group.test.dependencies]
responses = "^0.25.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
